--- a/homepage.html
+++ b/homepage.html
@@ -28,6 +28,11 @@ body {
     <th width="594" align="right" scope="col"><img src="header.gif" width="609" height="123" /></th>
   </tr>
 </table>
+	
+<script>
+  document.write(date())
+</script>
+	
 <table width="778" border="0" align="center">
   <tr bgcolor="#FFFFFF">
     <th height="24" valign="bottom" scope="col"><a href="authors.html" target="_self">推理作家</a></th>
